styling skills section

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             My name is Evan Doherty. I'm a software engineer with a degree in mathematics and a
             passion for music and surfing
           </li>
-
-
         </ul>
       </div>
     </section>
+
+
     <section class='row' id='portfolio'>
       <h1 class='col-12'>
         Projects
@@ -95,32 +95,91 @@
             </div>
           </div>
         </div>
-
       </div>
+
     </section>
     <section class='row' id='skills-education'>
-      <div class='row skills' id='backend-row'>
-        <div class='col-6'>
-          Backend
+      <div class='row header'>
+        <h1 class='col-12'>
+          Skills
+        </h1>
+      </div>
+      <!-- <div class="row skills"> -->
+      <div class='row skill backend-div'>
+        <div class='col-6 left backend-header'>
+          <p class="skill-type">Backend</p>
         </div>
-        <div class='col-6'>
-          <i class="fab icon fa-js"></i>
+        <div class='col-6 right'>
+          <!-- <i class="fab icon fa-js"></i>
           <i class="fab icon fa-react"></i>
           <i class="fab icon fa-node-js"></i>
-          <i class="fab icon fa-python"></i>
+          <i class="fab icon fa-python"></i> -->
+
+          <ul class='skill-list'>
+            <li>MongoDB</li>
+            <li>Atlas</li>
+            <li>Express</li>
+            <li>Node.js</li>
+            <li>PostgreSQL</li>
+            <li>Heroku</li>
+            <li>Goorm</li>
+          </ul>
         </div>
       </div>
-      <div class='row skills' id='frontend-row'>
-        <div class='col-6'>
-          Frontend
+
+      <div class='row skill frontend-div'>
+        <div class='col-6 left frontend-header'>
+          <p class='skill-type'>
+            Frontend
+          </p>
         </div>
-        <div class="col-6">
-          <i class="fab icon fa-css3-alt"></i>
+        <div class="col-6 right">
+          <!-- <i class="fab icon fa-css3-alt"></i>
           <i class="fab icon fa-git"></i>
           <i class="fab icon fa-github"></i>
-          <i class="fab icon fa-html5"></i>
+          <i class="fab icon fa-html5"></i> -->
+
+          <ul class='skill-list'>
+            <li>ReactJS</li>
+            <li>React-Native</li>
+            <li>Expo</li>
+            <li>Javascript</li>
+            <li>HTML 5</li>
+            <li>CSS + CSS Flexbox</li>
+            <li>Bootstrap</li>
+            <li>Ant Design</li>
+          </ul>
         </div>
       </div>
+
+      <div class='row skill api-div'>
+        <div class='col-6 left api-header'>
+          <p class='skill-type'>
+            API's
+          </p>
+        </div>
+        <div class="col-6 right">
+          <!-- <i class="fab icon fa-css3-alt"></i>
+          <i class="fab icon fa-git"></i>
+          <i class="fab icon fa-github"></i>
+          <i class="fab icon fa-html5"></i> -->
+
+          <ul class='skill-list'>
+            <li>Google Maps</li>
+            <li>Google Places</li>
+            <li>Spotify</li>
+            <li>Authentication
+              <ul class='skill-list'>
+                <li>Google</li>
+                <li>Facebook</li>
+                <li>Spotify</li>
+              </ul>
+            </li>
+
+          </ul>
+        </div>
+      </div>
+      <!-- </div> -->
 
 
 
