--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Evan Doherty</title>
 </head>
 
@@ -24,12 +24,13 @@
     <button onclick="toggleMenu()" class='toggle'>
       <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
-    <ul class='menu'>
-      <li class='item'><a>Home</a></li>
-      <li class='item'><a>Portfolio</a></li>
-      <li class='item'><a>Skills/Education</a></li>
-      <li class='item'><a>About Me</a></li>
-      <li class='item'><a>Contact</a></li>
+    <ul class='menu navbar-nav d-flex flex-row'>
+      <li class='item nav-item active'><a class='nav-link scroll' href='#home'>Home</a></li>
+      <li class='item nav-item'><a class='scroll' href='#portfolio'>Portfolio</a></li>
+      <li class='item nav-item'><a class='scroll' href='#skills-section'>Skills</a></li>
+      <li class='item nav-item'><a class='scroll' href='#edu-section'>Education</a></li>
+      <li class='item nav-item'><a class='scroll' href='#about'>About Me</a></li>
+      <li class='item nav-item'><a class='scroll' href='#contact'>Contact</a></li>
     </ul>
   </nav>
   <!-- ///////////////////////////////////////////////////////////////////// -->
@@ -40,7 +41,7 @@
   <div class='body'>
     <section id='home' class='row'>
       <div id='home-img' class='sm-col-12 col-md-4 col-lg-3'>
-        <img id='headshot' src="assets/headshot_2.JPG" alt="headshot">
+        <img id='headshot' src="assets/headshot_3.JPG" alt="headshot">
       </div>
       <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
         <ul class='home-about'>
@@ -156,14 +157,14 @@
       </h1>
 
       <div class='row skills'>
-        <div class='col-12 fade-in card-container mb-3'>
+        <div class='col-12 card-container mb-3'>
           <div class='card skill-card'>
-            <div class='left-div backend'>
+            <div class='left-div slide-in from-left backend'>
               <p class='left-text'>
                 Backend
               </p>
             </div>
-            <div class='right-div'>
+            <div class='right-div slide-in from-right'>
               <ul class='skills-list'>
                 <li><img class='icon-img' src="assets/mongodb.png" alt="mongodb"> MongoDB</li>
                 <li><img class='icon-img' src="assets/express.jpg" alt="express"> Express</li>
@@ -177,15 +178,15 @@
           </div>
         </div>
 
-        <div class='col-12 fade-in card-container mb-3'>
+        <div class='col-12 card-container mb-3'>
           <div class='card skill-card'>
-            <div class='left-div frontend'>
+            <div class='left-div slide-in from-left frontend'>
               <p class='left-text'>
 
                 Frontend
               </p>
             </div>
-            <div class='right-div'>
+            <div class='right-div slide-in from-right'>
               <ul class='skills-list'>
                 <li><img class='icon-img' src="assets/react-native.png" alt="rn"> React-Native</li>
                 <li><img class='icon-img' src="assets/react.png" alt="react"> ReactJS</li>
@@ -199,14 +200,14 @@
           </div>
         </div>
 
-        <div class='col-12 fade-in card-container mb-3'>
+        <div class='col-12 card-container mb-3'>
           <div class='card skill-card'>
-            <div class='left-div apis'>
+            <div class='left-div slide-in from-left apis'>
               <p class='left-text'>
                 API's
               </p>
             </div>
-            <div class='right-div'>
+            <div class='right-div slide-in from-right'>
               <ul class='skills-list'>
                 <li><img class='icon-img' src="assets/places.png" alt="places"> Google Places</li>
                 <li><img class='icon-img' src="assets/maps.png" alt="maps"> Google Maps</li>
@@ -281,7 +282,7 @@
 
 
     <!-- ////////////////////////////////ABOUT ME////////////////////////////////// -->
-    <section class='row' id='about-section'>
+    <section class='row' id='about'>
       <h1 class='col-12 section-header'>
         About Me
       </h1>
@@ -310,12 +311,6 @@
   <!-- </footer> -->
 
   <script type="text/javascript" src="index.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
