added project pages

--- a/projects/chat.html
+++ b/projects/chat.html
@@ -4,11 +4,68 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../project.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
+  <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Let's Chat</title>
 </head>
 
 <body>
+  <div class="d-flex flex-row p-header">
+    <div class="logo-div">
+      <a href="../index.html"><img class='p-logo' src="../assets/logo.JPG" alt="logo"></a>
+    </div>
+    <h1 class='p-name'>Let's Chat</h1>
+  </div>
 
+  <div class='row p-container '>
+    <div class='col-12 p-top'>
+      <ul class='slideshow chat'>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+
+
+    <div class='col-12 p-bottom'>
+      <div class='icon-container'>
+        <ul class="icon-list d-flex flex-row">
+          <li><img class='icon-img' src="../assets/mongodb.png" alt="mongodb"></li>
+          <li><img class='icon-img' src="../assets/express.jpg" alt="express"></li>
+          <li><img class='icon-img' src="../assets/nodejs.png" alt="nodejs"></li>
+          <li><img class='icon-img' src="../assets/facebook.png" alt="facebook"></li>
+        </ul>
+      </div>
+      <div class='description-container'>
+        <p class='mb-0'>
+          Lorem Ipsum is simply dummy text of the printing and
+          typesetting industry. Lorem Ipsum has been the industry's
+          standard dummy text ever since the 1500s, when an unknown
+          printer took a galley of type and scrambled it to make a
+          type specimen book. It has survived not only five centuries,
+          but also the leap into electronic typesetting, remaining
+          essentially unchanged.
+        </p>
+      </div>
+
+    </div>
+
+  </div>
+
+  <!-- <button class='p-btn'><a href="">link to code</a></button> -->
+
+
+
+  <script type="text/javascript" src="index.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
