--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -19,7 +18,7 @@
 <body>
 
   <!-- //////////////////////////HEADER////////////////////////////// -->
-  <nav class='headerDiv'>
+  <nav class='headerDiv header-show'>
     <a class='logo'><img class='logo-img' src="assets/logo.JPG" alt="logo"></a>
     <button onclick="toggleMenu()" class='toggle'>
       <i class="fas fa-bars" aria-hidden="true"></i>
@@ -59,7 +58,7 @@
 
     <!-- ////////////////////////////////PROJECTS////////////////////////////////// -->
     <section class='row' id='portfolio'>
-      <h1 class='col-12 section-header'>
+      <h1 class='col-12 fade-in section-header '>
         Projects
       </h1>
       <div class='row projects'>
@@ -83,7 +82,28 @@
             </div>
           </div>
         </div>
-
+        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+          <div class='card project-card'>
+            <div class='img-container'>
+              <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
+              <a href="projects/tb.html" class='project-btn'><i class="far fa-eye"></i></a>
+            </div>
+            <div class='card-body'>
+              <h1 class='card-title'>Travel Book</h1>
+              <p class='card-text'>iOS app for logging every detail of your trip.</p>
+              <div class='d-flex flex-row flex-wrap tags'>
+                <button>MongoDB</button>
+                <button>Express</button>
+                <button>React-Native</button>
+                <button>Node.JS</button>
+                <button>Expo</button>
+                <button>Google Authentication</button>
+                <button>Google Places</button>
+                <button>Google Maps</button>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
@@ -97,6 +117,7 @@
                 <button>Javascript</button>
                 <button>HTML</button>
                 <button>CSS</button>
+                <button>Bootstrap</button>
               </div>
             </div>
           </div>
@@ -121,28 +142,7 @@
           </div>
         </div>
 
-        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
-          <div class='card project-card'>
-            <div class='img-container'>
-              <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
-              <a href="projects/tb.html" class='project-btn'><i class="far fa-eye"></i></a>
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Travel Book</h1>
-              <p class='card-text'>iOS app for logging every detail of your trip.</p>
-              <div class='d-flex flex-row flex-wrap tags'>
-                <button>MongoDB</button>
-                <button>Express</button>
-                <button>React-Native</button>
-                <button>Node.JS</button>
-                <button>Expo</button>
-                <button>Google Authentication</button>
-                <button>Google Places</button>
-                <button>Google Maps</button>
-              </div>
-            </div>
-          </div>
-        </div>
+
       </div>
     </section>
 
@@ -283,13 +283,45 @@
 
     <!-- ////////////////////////////////ABOUT ME////////////////////////////////// -->
     <section class='row' id='about'>
-      <h1 class='col-12 section-header'>
+      <h1 class='col-12 fade-in section-header'>
         About Me
       </h1>
-      <div class='col-12 about-container'>
-
+      <div class='col-12 fade-in about-container'>
+        <div>thing 1</div>
+        <div>thing 2</div>
+        <div>thing 3</div>
       </div>
     </section>
+
+    <!-- ///////////////////////////////////////////////////////////////////// -->
+
+
+
+
+    <!-- ////////////////////////////////CONTACT////////////////////////////////// -->
+
+    <footer class='row' id='contact'>
+      <h1 class='col-12 fade-in section-header'>
+        Contact
+      </h1>
+      <div class='d-flex flex-row fade-in justify-content-between contact-container'>
+        <div class='name-div'>
+          <p><span class='name'>Evan Doherty</span> | Software Engineer</p>
+        </div>
+        <div class='email-div'>
+          <p>Email me: <a href="">edoherty77@gmail.com</a></p>
+        </div>
+        <div class='contact-div'>
+          <ul class='d-flex flex-row' id="contact-icons-list">
+            <li><a href='#'><i class="fas fa-envelope"></i></a></li>
+            <li><a href='#'><i class="fab fa-facebook"></i></a></li>
+            <li><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i class="fab fa-linkedin-in"></i></a></li>
+            <li><a href='https://github.com/edoherty77'><i class="fab fa-github"></i></a></li>
+          </ul>
+
+        </div>
+      </div>
+    </footer>
 
     <!-- ///////////////////////////////////////////////////////////////////// -->
   </div>
@@ -300,15 +332,7 @@
 
 
 
-  <!-- <footer id='footer'>
-    Footer -->
-  <!-- <ul id="footer">
-      <li><a href='#'><i class="fas fa-envelope"></i></a></li>
-      <li><a href='#'><i class="fab fa-facebook"></i></a></li>
-      <li><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i class="fab fa-linkedin-in"></i></a></li>
-      <li><a href='https://github.com/edoherty77'><i class="fab fa-github"></i></a></li> 
-    </ul> -->
-  <!-- </footer> -->
+
 
   <script type="text/javascript" src="index.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
