adding event listeners

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <p class='card-text'>Listen, search, and vote using Spotify's API.</p>
               <div class='d-flex flex-row flex-wrap tags'>
                 <button>MongoDB</button>
-                <button>Express</button>
+                <button class='express'>Express</button>
                 <button>ReactJS</button>
                 <button>Node.JS</button>
                 <button>Ant Design</button>
@@ -93,7 +93,7 @@
               <p class='card-text'>iOS app for logging every detail of your trip.</p>
               <div class='d-flex flex-row flex-wrap tags'>
                 <button>MongoDB</button>
-                <button>Express</button>
+                <button class='express'>Express</button>
                 <button>React-Native</button>
                 <button>Node.JS</button>
                 <button>Expo</button>
@@ -133,8 +133,8 @@
               <h1 class='card-title'>Let's Chat</h1>
               <p class='card-text'>Education-based chat app.</p>
               <div class='d-flex flex-row tags'>
-                <button>MongoDB</button>
-                <button>Express</button>
+                <button id='test'>MongoDB</button>
+                <button class='express'>Express</button>
                 <button>Node.JS</button>
                 <button>Facebook Authentication</button>
               </div>
