messing with media queries

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <img class='card-img-top' id='p3-img' src="assets/vote.png" alt="vote-ify">
-              <a href="projects/vote.html" class='project-btn'><i class="far fa-eye"></i></a>
+              <a href="projects/vote.html"><img class='card-img-top' id='p3-img' src="assets/vote.png"
+                  alt="vote-ify"></a>
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Vote-ify</h1>
@@ -85,8 +85,8 @@
         <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
-              <a href="projects/tb.html" class='project-btn'><i class="far fa-eye"></i></a>
+              <a href="projects/tb.html"><img class='card-img-top' id='p4-img' src="assets/tb_2.PNG"
+                  alt="travel-book"></a>
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Travel Book</h1>
@@ -107,8 +107,8 @@
         <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
-              <a href="projects/sudoku.html" class='project-btn'><i class="far fa-eye"></i></a>
+              <a href="projects/sudoku.html"><img class='card-img-top' id='p1-img' src="assets/sudoku.png"
+                  alt="sudoku"></a>
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Sudoku</h1>
@@ -126,8 +126,8 @@
         <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <img class='card-img-top' id='p2-img' src="assets/chat.png" alt="lets-chat">
-              <a href="projects/chat.html" class='project-btn'><i class="far fa-eye"></i></a>
+              <a href="projects/chat.html"><img class='card-img-top' id='p2-img' src="assets/chat.png"
+                  alt="lets-chat"></a>
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Let's Chat</h1>
