--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class='sm-col-12 col-md-8 col-lg-9 home-text'>
         <ul class='home-about'>
           <li>
-            My name is Evan Doherty.
+            My name is Evan Doherty
           </li>
           <li>
             I'm a full-stack software engineer with a degree in mathematics and a
