--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -62,7 +63,7 @@
         Projects
       </h1>
       <div class='row projects'>
-        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
               <a href="projects/vote.html"><img class='card-img-top' id='p3-img' src="assets/vote.png"
@@ -82,7 +83,7 @@
             </div>
           </div>
         </div>
-        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
               <a href="projects/tb.html"><img class='card-img-top' id='p4-img' src="assets/tb_2.PNG"
@@ -104,7 +105,7 @@
             </div>
           </div>
         </div>
-        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
               <a href="projects/sudoku.html"><img class='card-img-top' id='p1-img' src="assets/sudoku.png"
@@ -123,7 +124,7 @@
           </div>
         </div>
 
-        <div class='col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
               <a href="projects/chat.html"><img class='card-img-top' id='p2-img' src="assets/chat.png"
