--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <i class="fas fa-bars" aria-hidden="true"></i>
     </button>
     <ul class='menu navbar-nav d-flex flex-row'>
-      <li class='item nav-item active'><a class='nav-link scroll' href='#home'>Home</a></li>
-      <li class='item nav-item'><a class='scroll' href='#portfolio'>Portfolio</a></li>
-      <li class='item nav-item'><a class='scroll' href='#skills-section'>Skills</a></li>
-      <li class='item nav-item'><a class='scroll' href='#edu-section'>Education</a></li>
-      <li class='item nav-item'><a class='scroll' href='#about'>About Me</a></li>
-      <li class='item nav-item'><a class='scroll' href='#contact'>Contact</a></li>
+      <li onclick="toggleMenu()" class='item nav-item active'><a class='nav-link scroll' href='#home'>Home</a></li>
+      <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#portfolio'>Portfolio</a></li>
+      <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#skills-section'>Skills</a></li>
+      <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#edu-section'>Education</a></li>
+      <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#about'>About Me</a></li>
+      <li onclick="toggleMenu()" class='item nav-item'><a class='scroll' href='#contact'>Contact</a></li>
     </ul>
   </nav>
   <!-- ///////////////////////////////////////////////////////////////////// -->
