--- a/index.html
+++ b/index.html
@@ -63,26 +63,8 @@
         Projects
       </h1>
       <div class='row projects'>
-        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
-          <div class='card project-card'>
-            <div class='img-container'>
-              <a href="projects/vote.html"><img class='card-img-top' id='p3-img' src="assets/vote.png"
-                  alt="vote-ify"></a>
-            </div>
-            <div class='card-body'>
-              <h1 class='card-title'>Vote-ify</h1>
-              <p class='card-text'>Listen, search, and vote using Spotify's API.</p>
-              <div class='d-flex flex-row flex-wrap tags'>
-                <button>MongoDB</button>
-                <button class='express'>Express</button>
-                <button>ReactJS</button>
-                <button>Node.JS</button>
-                <button>Ant Design</button>
-                <button>Spotify Authentication</button>
-              </div>
-            </div>
-          </div>
-        </div>
+
+
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
@@ -105,6 +87,31 @@
             </div>
           </div>
         </div>
+
+        <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
+          <div class='card project-card'>
+            <div class='img-container'>
+              <a href="projects/vote.html"><img class='card-img-top' id='p3-img' src="assets/vote.png"
+                  alt="vote-ify"></a>
+            </div>
+            <div class='card-body'>
+              <h1 class='card-title'>Vote-ify</h1>
+              <p class='card-text'>Listen, search, and vote using Spotify's API.</p>
+              <div class='d-flex flex-row flex-wrap tags'>
+                <button>MongoDB</button>
+                <button class='express'>Express</button>
+                <button>ReactJS</button>
+                <button>Node.JS</button>
+                <button>Ant Design</button>
+                <button>Spotify Authentication</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+
+
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
@@ -157,7 +164,7 @@
         Skills
       </h1>
 
-      <div class='row skills'>
+      <div class='row skills' id='skills-row'>
         <div class='col-12 card-container mb-3'>
           <div class='card skill-card'>
             <div class='left-div slide-in from-left backend'>
