--- a/index.html
+++ b/index.html
@@ -295,42 +295,36 @@
         About Me
       </h1>
       <div class='col-12 fade-in about-container'>
-        <div class='am am-1'>
-          <img class='am-pic' src="assets/me.JPG" alt="">
-          <div>After graduating from UNCW, I knew I had a passion for mathematics and problem-solving but didn't know
-            how I wanted to
-            apply it in my professional life. So, I spent a year in Nicaragua, reigniting my passion for surfing and
-            teaching.
-            Once I returned, I considered getting my teaching degree or going into business with my father,
-            a renowned chef but was soon introduced to coding. I immediately realized my calling.
-            I continued to work under my father as I got serious about coding, taking courses and expanding my
-            expertise.
-            I topped off my web-development education with General Assembly Bootcamp and am excited to jumpstart my new
-            career. </div>
-        </div>
         <div class='am am-2'>
-          <img class='am-pic' src="assets/me.JPG" alt="">
-          <div>I played lacrosse, wrestled and surf, as any good Long Island native would. I am the youngest of a pack
+          <!-- <div class='am-pic-div'>
+
+            <img class='am-pic' src="assets/me.JPG" alt="">
+          </div> -->
+          <div class='am-text'>Growing up, I played lacrosse, wrestled and surf, as any good Long Island native would. I
+            am the youngest of a pack
             of 3, so I am resilient and have tough skin. I eat at all hours of the day and night (I will literally wake
             up at 6 AM for a snack and go back to sleep).
             I work hard, play hard, but most of all, I code hard.
           </div>
         </div>
-        <!-- <div class='am am-3'>
-          <img class='am-pic' src="assets/me.JPG" alt="">
-          <div>my dad was the head chef at the walorf astoria for 25 years. cooked for presidents and shiiiit. opened
-            his
-            own restaurant in 2015. when i moved back from nica in 2018, i worked for him while considering getting my
-            teaching
-            degree, or learning business from my father. was introduced to coding and i immediately jizzed myself.
-            after i cleaned up my jizz i got serious and took more and more classes, but i kept on making messes. with
-            only
-            so much jizz left, i decided to start interviewing.then covid happened and literally everyone started dying,
-            but i wav
-            chillen because i was getting paid 1200 a week just to jizz and not die. so i decided to do a bootcamp. and
-            here i fucking am.
+        <div class='am am-1'>
+          <!-- <div class='am-pic-div'>
+
+            <img class='am-pic' src="assets/me.JPG" alt="">
+          </div> -->
+          <div class='am-text'>After graduating from UNCW, I knew I had a passion for mathematics and problem-solving
+            but didn't know
+            how I wanted to
+            apply it in my professional life. So, I spent a year in Nicaragua, reigniting my passion for surfing and
+            teaching.
+            Once I returned, I considered getting my teaching degree or going into business with my father,
+            a renowned chef, but was soon introduced to coding. I immediately realized my calling.
+            I continued to work under my father as I got serious about coding, taking courses and expanding my
+            expertise.
+            I topped off my web-development education with General Assembly Bootcamp and am excited to jumpstart my new
+            career.
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
 
@@ -350,12 +344,11 @@
           <p><span class='name'>Evan Doherty</span> | Software Engineer</p>
         </div>
         <div class='email-div'>
-          <p>Email me: <a href="">edoherty77@gmail.com</a></p>
+          <p>Email me: <a href="">evan.doherty.ny@gmail.com</a></p>
         </div>
         <div class='contact-div'>
           <ul class='d-flex flex-row' id="contact-icons-list">
             <li><a href='#'><i class="fas fa-envelope"></i></a></li>
-            <li><a href='#'><i class="fab fa-facebook"></i></a></li>
             <li><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i class="fab fa-linkedin-in"></i></a></li>
             <li><a href='https://github.com/edoherty77'><i class="fab fa-github"></i></a></li>
           </ul>
