--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <a href="projects/tb.html"><img class='card-img-top' id='p4-img' src="assets/tb_2.PNG"
-                  alt="travel-book"></a>
+              <img class='card-img-top' id='p4-img' src="assets/tb_2.PNG" alt="travel-book">
+              <!-- <a href="projects/tb.html"></a> -->
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Travel Book</h1>
@@ -91,8 +91,8 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <a href="projects/vote.html"><img class='card-img-top' id='p3-img' src="assets/vote.png"
-                  alt="vote-ify"></a>
+              <img class='card-img-top' id='p3-img' src="assets/vote.png" alt="vote-ify">
+              <!-- <a href="projects/vote.html"></a> -->
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Vote-ify</h1>
@@ -115,8 +115,8 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <a href="projects/sudoku.html"><img class='card-img-top' id='p1-img' src="assets/sudoku.png"
-                  alt="sudoku"></a>
+              <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
+              <!-- <a href="projects/sudoku.html"></a> -->
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Sudoku</h1>
@@ -134,8 +134,8 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <a href="projects/chat.html"><img class='card-img-top' id='p2-img' src="assets/chat.png"
-                  alt="lets-chat"></a>
+              <img class='card-img-top' id='p2-img' src="assets/chat.png" alt="lets-chat">
+              <!-- <a href="projects/chat.html"></a> -->
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Let's Chat</h1>
