contact section updated

--- a/projects/sudoku.html
+++ b/projects/sudoku.html
@@ -44,13 +44,25 @@
       </div>
       <div class='description-container'>
         <p class='mb-0'>
-          Lorem Ipsum is simply dummy text of the printing and
-          typesetting industry. Lorem Ipsum has been the industry's
-          standard dummy text ever since the 1500s, when an unknown
-          printer took a galley of type and scrambled it to make a
-          type specimen book. It has survived not only five centuries,
-          but also the leap into electronic typesetting, remaining
-          essentially unchanged.
+          A sudoku puzzle is a 1 player board game where the numbers 1-9 must appear only once in any given column, row,
+          and 9x9 sqaure.
+          In my app, players can choose up to 4 levels of difficulty, which each give an appropriate amount of time to
+          finish the puzzle.
+          Once a player chooses a difficulty, the "start" button will become enabled, the the player can press start.
+          Once clicked, a
+          random puzzle will appear and the time will start. If the player pauses the game, the timer will stop and the
+          puzzle will
+          disappear, and a message will be provided. When the player resumes the game and the puzzle is once again
+          rendered,
+          the player can click on an empty square to select it, and then choose any of the numbers from the bottom of
+          the screen.
+          If the number picked is correct, the number will be added and the square will be become disabled. If the
+          number is wrong, the
+          number will appear in red and all other squares will become disabled. Once the player clicks the undo button,
+          the red number
+          will disappear and a mistake will be added to your tally of mistakes. You're allowed 3! If a player is stuck,
+          they can choose
+          to select the hint button.
         </p>
       </div>
 
