--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js'></script>
   <script src="https://use.fontawesome.com/d6edd70b37.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      // https://dashboard.emailjs.com/admin/integration
+      emailjs.init('user_lMBNS6cSsEowjI2QvKFjt');
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function () {
+      document.getElementById('contact-form').addEventListener('submit', function (event) {
+        event.preventDefault();
+        // generate a five digit number for the contact_number variable
+        this.contact_number.value = Math.random() * 100000 | 0;
+        // these IDs from the previous steps
+        emailjs.sendForm('contact_service', 'contact_form', this);
+      });
+    }
+  </script>
   <title>Evan Doherty</title>
 </head>
 
@@ -115,8 +133,10 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
-              <!-- <a href="projects/sudoku.html"></a> -->
+              <a href="projects/sudoku.html">
+
+                <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
+              </a>
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Sudoku</h1>
@@ -300,7 +320,8 @@
 
             <img class='am-pic' src="assets/me.JPG" alt="">
           </div> -->
-          <div class='am-text'>Growing up, I played lacrosse, wrestled and surf, as any good Long Island native would. I
+          <div class='am-text'>Growing up, I played lacrosse, wrestled and surfed, as any good Long Island native would.
+            I
             am the youngest of a pack
             of 3, so I am resilient and have tough skin. I eat at all hours of the day and night (I will literally wake
             up at 6 AM for a snack and go back to sleep).
@@ -335,26 +356,36 @@
 
     <!-- ////////////////////////////////CONTACT////////////////////////////////// -->
 
-    <footer class='row' id='contact'>
+    <footer class='row' id='contact-row'>
       <h1 class='col-12 fade-in section-header'>
         Contact
       </h1>
-      <div class='d-flex flex-row fade-in justify-content-between contact-container'>
-        <div class='name-div'>
-          <p><span class='name'>Evan Doherty</span> | Software Engineer</p>
-        </div>
-        <div class='email-div'>
-          <p>Email me: <a href="">evan.doherty.ny@gmail.com</a></p>
-        </div>
-        <div class='contact-div'>
-          <ul class='d-flex flex-row' id="contact-icons-list">
-            <li><a href='#'><i class="fas fa-envelope"></i></a></li>
-            <li><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i class="fab fa-linkedin-in"></i></a></li>
-            <li><a href='https://github.com/edoherty77'><i class="fab fa-github"></i></a></li>
-          </ul>
 
+      <div class='info-div col-sm-12 col-md-6'>
+        <p><span class='name'>Evan Doherty</span> | Software Engineer</p>
+        <p>Email: evan.doherty.ny@gmail.com</p>
+        <div class='icon-div d-flex flex-row'>
+          <p><a href='https://www.linkedin.com/in/evan-doherty-0310a544/'><i
+                class="fab fa-linkedin-in prof-icon"></i></a></p>
+          <p><a href='https://github.com/edoherty77'><i class="fab fa-github prof-icon"></i></a></p>
         </div>
       </div>
+
+
+
+      <div class='contact-div col-sm-12 col-md-6'>
+        <form id="contact-form">
+          <input type="hidden" name="contact_number"> <br>
+          <!-- <label>Name</label> -->
+          <input type="text" name="user_name" placeholder="Name"> <br>
+          <!-- <label>Email</label> -->
+          <input type="email" name="user_email" placeholder="Email"> <br>
+          <!-- <label>Message</label> -->
+          <textarea name="message" placeholder="Message"></textarea> <br>
+          <input type="submit" value="Send">
+        </form>
+      </div>
+
     </footer>
 
     <!-- ///////////////////////////////////////////////////////////////////// -->
