--- a/index.html
+++ b/index.html
@@ -375,13 +375,13 @@
 
       <div class='contact-div col-sm-12 col-md-6'>
         <form id="contact-form">
-          <input type="hidden" name="contact_number"> <br>
+          <input type="hidden" name="contact_number">
           <!-- <label>Name</label> -->
-          <input type="text" name="user_name" placeholder="Name"> <br>
+          <input type="text" name="user_name" placeholder="Name">
           <!-- <label>Email</label> -->
-          <input type="email" name="user_email" placeholder="Email"> <br>
+          <input type="email" name="user_email" placeholder="Email">
           <!-- <label>Message</label> -->
-          <textarea name="message" placeholder="Message"></textarea> <br>
+          <textarea name="message" placeholder="Message"></textarea>
           <input type="submit" value="Send">
         </form>
       </div>
