--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
         <div class='col-xs-12 col-sm-12 card-container fade-in col-md-12 col-lg-6 mb-3'>
           <div class='card project-card'>
             <div class='img-container'>
-              <a href="projects/sudoku.html">
+              <!-- <a href="projects/sudoku.html">
 
-                <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
-              </a>
+              </a> -->
+              <img class='card-img-top' id='p1-img' src="assets/sudoku.png" alt="sudoku">
             </div>
             <div class='card-body'>
               <h1 class='card-title'>Sudoku</h1>
@@ -382,7 +382,7 @@
           <input type="email" name="user_email" placeholder="Email">
           <!-- <label>Message</label> -->
           <textarea name="message" placeholder="Message"></textarea>
-          <input type="submit" value="Send">
+          <input type="submit" value="Send" onclick="submitMessage()">
         </form>
       </div>
 
